--- a/signin.html
+++ b/signin.html
@@ -71,7 +71,7 @@
     <section>
       <div class="container-fluid p-0 m-0 layout-full d-flex justify-content-center align-items-center">
         <div class="container d-flex flex-column flex-lg-row bg-sign-in text-white">
-          <div class="col-12 col-lg-6 d-flex flex-column justify-content-start align-items-center h-100 py-5 px-5">
+          <div class="col-12 col-lg-6 d-flex flex-column justify-content-center justify-content-lg-start align-items-center h-100 py-5 px-2 px-lg-5">
             <!-- title -->
             <div class="d-flex flex-column text-start w-100">
               <h1>Log In</h1>
@@ -93,7 +93,7 @@
                 <input type="password" name="password" id="password" placeholder="password" class="mt-2">
                 <button class="btn btn-outline-secondary without-border position-absolute bottom-0" type="button"
                   id="togglePassword">
-                  <i class="bi bi-eye m-0 p-0"></i>
+                  <i class="bi bi-eye-slash m-0 p-0"></i>
                 </button>
               </div>
               <!-- remember me  & fogot password -->
