--- a/signin.html
+++ b/signin.html
@@ -26,7 +26,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
   <!-- Template Stylesheet -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="css/signin.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -44,24 +44,6 @@
 
 
   <div class="container-fluid position-relative p-0 m-0">
-
-
-
-    <!-- Spinner Start -->
-    <!-- <div
-        id="spinner"
-        class="show position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
-      >
-        <div
-          class="spinner-border text-primary"
-          style="width: 3rem; height: 3rem"
-          role="status"
-        >
-          <span class="sr-only">Loading...</span>
-        </div>
-      </div> -->
-    <!-- Spinner End -->
-
 
 
 
