--- a/dashboard.html
+++ b/dashboard.html
@@ -33,31 +33,31 @@
   <div class="container-fluid position-relative d-flex p-0">
 
     <!-- Sidebar Start -->
-    <div class="sidebar bg-dark text-white d-flex flex-column justify-content-between py-4 ps-4 pe-0">
+    <div class="sidebar bg-dark text-white d-flex flex-column justify-content-between pt-2 pb-4 ps-4 pe-0">
       <div class="d-flex flex-column">
         <img src="./img/elements/dashboard logo.png" alt="" class="img-nav-dashboard px-3 my-3">
         <ul class="nav flex-column">
           <li class="nav-item my-1">
             <a class="nav-link active-link" href="#">
-              <i class="bi bi-grid-1x2-fill"></i>
+              <i class="bi bi-grid-1x2-fill me-2"></i>
               Dashboard
             </a>
           </li>
           <li class="nav-item my-1">
             <a class="nav-link" href="#">
-              <i class="bi bi-shield-check"></i>
+              <i class="bi bi-shield-check me-2"></i>
               Notification
             </a>
           </li>
           <li class="nav-item my-1">
             <a class="nav-link" href="#">
-              <i class="bi bi-bookmarks"></i>
+              <i class="bi bi-bookmarks me-2"></i>
               Documentation
             </a>
           </li>
           <li class="nav-item my-1">
             <a class="nav-link" href="#">
-              <i class="bi bi-person"></i>
+              <i class="bi bi-person me-2"></i>
               Profile
             </a>
           </li>
@@ -66,19 +66,19 @@
       <ul class="nav flex-column">
         <li class="nav-item my-1">
           <a class="nav-link" href="#">
-            <i class="bi bi-info-circle"></i>
+            <i class="bi bi-info-circle me-2"></i>
             Information
           </a>
         </li>
         <li class="nav-item my-1">
           <a class="nav-link" href="#">
-            <i class="bi bi-sliders"></i>
+            <i class="bi bi-sliders me-2"></i>
             Account Settings
           </a>
         </li>
         <li class="nav-item my-1">
           <a class="nav-link" href="#">
-            <i class="bi bi-box-arrow-left"></i>
+            <i class="bi bi-box-arrow-left me-2"></i>
             Logout
           </a>
         </li>
@@ -91,80 +91,244 @@
 
 
     <!-- Content Start -->
-    <div class="content h-100 background-mobile-dashbord">
-      <!-- Navbar Start -->
-      <nav class="navbar navbar-expand navbar-dark sticky-top px-4 py-0">
-        <h3 class="d-none d-lg-block flex-shrink-0 ms-5 text-white font-27 font-futura">
-          Dashboard
-        </h3>
+    <div class="content dashboard-inner d-flex flex-column w-100">
 
-        <div class="navbar-nav align-items-center ms-auto">
-          <div class="nav-item dropdown">
-            <a href="#" class="nav-link">
-              <img src="./img/elements/admin pic.png" alt="" class="bell-icon" />
-            </a>
-          </div>
-          <div class="nav-item dropdown">
-            <a href="#" class="nav-link d-flex flex-row align-items-center button-gradient my-2">
-              <img class="rounded-circle me-lg-2" src="img/admin pic.png" alt="" style="width: 40px; height: 40px" />
-              <div class="d-flex flex-column">
-                <span class="d-none d-lg-inline-flex font-12 font-futura" style="color: rgba(255, 255, 255, 0.8)">Wade
-                  Warren</span>
-                <span class="d-none d-lg-inline-flex color-gray font-futura font-10">Wade Warren</span>
-              </div>
-            </a>
+
+      <!-- topbar start -->
+      <div class="col-12 d-flex flex-row justify-content-between py-2">
+        <div class="col-4 d-flex flex-column flex-lg-row">
+          <div class="col-2"></div>
+          <div class="col-10">
+            <h4 class="text-white my-2">Dashboard</h4>
           </div>
         </div>
-      </nav>
-      <!-- Navbar End -->
-      <div class="hr-line"></div>
+        <div class="col-8 d-flex flex-row justify-content-end align-items-center px-4">
+          <div class="px-3">
+            <a href="" class="text-light mx-1">
+              <svg width="42" height="42" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="1.05034" y="0.951465" width="44.1" height="44.1" rx="4.05" stroke="#094EFF"
+                  stroke-width="0.9" />
+                <rect x="1.05034" y="0.951465" width="44.1" height="44.1" rx="4.05"
+                  stroke="url(#paint0_linear_205_3528)" stroke-width="0.9" />
+                <path
+                  d="M23.2336 12.7407C24.7856 12.7407 26.274 13.4309 27.3714 14.6595C28.4688 15.8881 29.0853 17.5544 29.0853 19.2919C29.0853 26.5761 31.4587 28.0116 32.0998 28.0116H14.3674C15.0222 28.0116 17.3819 26.5608 17.3819 19.2919C17.3819 17.5544 17.9985 15.8881 19.0959 14.6595C20.1933 13.4309 21.6817 12.7407 23.2336 12.7407V12.7407Z"
+                  stroke="#094EFF" stroke-width="1.54286" stroke-linecap="round" stroke-linejoin="round" />
+                <path
+                  d="M23.2336 12.7407C24.7856 12.7407 26.274 13.4309 27.3714 14.6595C28.4688 15.8881 29.0853 17.5544 29.0853 19.2919C29.0853 26.5761 31.4587 28.0116 32.0998 28.0116H14.3674C15.0222 28.0116 17.3819 26.5608 17.3819 19.2919C17.3819 17.5544 17.9985 15.8881 19.0959 14.6595C20.1933 13.4309 21.6817 12.7407 23.2336 12.7407V12.7407Z"
+                  stroke="url(#paint1_linear_205_3528)" stroke-width="1.54286" stroke-linecap="round"
+                  stroke-linejoin="round" />
+                <g opacity="0.95">
+                  <path
+                    d="M21.1877 30.8062C21.3057 31.3132 21.5705 31.7621 21.9408 32.0825C22.311 32.403 22.7658 32.5768 23.2338 32.5768C23.7018 32.5768 24.1566 32.403 24.5268 32.0825C24.8971 31.7621 25.1619 31.3132 25.2798 30.8062"
+                    stroke="#094EFF" stroke-width="1.54286" stroke-linecap="round" stroke-linejoin="round" />
+                  <path
+                    d="M21.1877 30.8062C21.3057 31.3132 21.5705 31.7621 21.9408 32.0825C22.311 32.403 22.7658 32.5768 23.2338 32.5768C23.7018 32.5768 24.1566 32.403 24.5268 32.0825C24.8971 31.7621 25.1619 31.3132 25.2798 30.8062"
+                    stroke="url(#paint2_linear_205_3528)" stroke-width="1.54286" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </g>
+                <!-- circle -->
+                <circle cx="29.4001" cy="16.7012" r="4.5" fill="#15BFFD" />
+                <!-- circle end -->
+                <defs>
+                  <linearGradient id="paint0_linear_205_3528" x1="6.90034" y1="0.501464" x2="45.6003" y2="47.7515"
+                    gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#15BFFD" />
+                    <stop offset="1" stop-color="#0C105A" />
+                  </linearGradient>
+                  <linearGradient id="paint1_linear_205_3528" x1="18.3438" y1="12.4768" x2="30.2192" y2="36.273"
+                    gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#15BFFD" />
+                    <stop offset="1" stop-color="#0C105A" />
+                  </linearGradient>
+                  <linearGradient id="paint2_linear_205_3528" x1="23.2338" y1="30.8062" x2="23.2338" y2="32.5768"
+                    gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#15BFFD" />
+                    <stop offset="1" stop-color="#0C105A" />
+                  </linearGradient>
+                </defs>
+              </svg>
 
-      <div class="d-flex w-100 flex-column flex-lg-row">
-        <div class="col-12 col-lg-8 pe-lg-0 pb-lg-0 d-flex justify-content-center align-items-center text-white p-3">
-          <img src="./img/Market Overview Chart.svg" alt="" class="img-fluid">
-        </div>
-        <div class="col-12 col-lg-4 d-flex flex-column flex-md-row flex-lg-column">
-          <div class="col-12 col-md-6 col-lg-12  pb-0 p-3 d-flex justify-content-center align-items-center text-white">
-            <img src="./img/c1.svg" alt="" class="img-fluid">
+            </a>
           </div>
-          <div class="col-12 col-md-6 col-lg-12 p-3 pb-0 d-flex justify-content-center align-items-center text-white">
-            <img src="./img/c2.svg" alt="" class="img-fluid">
+          <div class="px-2 d-flex flex-row align-items-center admin-box">
+            <img src="./img/elements/admin pic.png" alt="" class="admin-img">
+            <div class="px-3 d-flex flex-column text-white">
+              <h6 class="mb-0">Wade Warren</h6>
+              <p class="mb-0">Wade Warren</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="d-flex w-100 flex-column flex-lg-row">
-        <div class="col-12 col-lg-5 d-flex flex-column">
-          <div class="d-flex flex-column flex-lg-row">
-            <div class="col-12 col-lg-6 p-3 pe-lg-0 pb-0">
-              <img src="./img/1.svg" alt="" class="img-fluid">
-            </div>
-            <div class="col-12 col-lg-6 p-3 pe-lg-0 pb-0">
-              <img src="./img/2.svg" alt="" class="img-fluid">
+      <div class="col-12 hr-line"></div>
+      <!-- topbar end -->
+
+
+      <!-- grid start -->
+      <div class="col-12 d-flex flex-column p-4 ">
+        <!-- row 1 -->
+        <div class="col-12  d-flex flex-row justify-content-center align-items-center">
+          <!-- chart -->
+          <div class="col-12 col-lg-8 d-flex justify-content-center align-items-center pe-2">
+            <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center ">
+              <h1>chart</h1>
             </div>
           </div>
-          <div class="d-flex flex-column flex-lg-row">
-            <div class="col-12 col-lg-6 p-3 pe-lg-0 pb-0">
-              <img src="./img/3.svg" alt="" class="img-fluid">
+
+          <div
+            class="col-12 col-lg-4 d-flex flex-column justify-content-center justify-content-lg-end align-items-center">
+            <!-- total -->
+            <div class="box-total col-12 d-flex flex-column justify-content-center align-items-center p-4">
+              <h3 class="mb-2">Total Balance</h3>
+              <div class="doller-box px-3 py-2">
+                <h2 class="mb-0">$ 68.789,44</h2>
+              </div>
+              <p class="mt-3 mb-2">Wallet Address:</p>
+              <span>jndsc67-hberu7-bfvty56-3ewadf-mbgkd</span>
             </div>
-            <div class="col-12 col-lg-6 p-3 pe-lg-0 pb-0">
-              <img src="./img/4.svg" alt="" class="img-fluid">
+            <!-- convert -->
+            <div class="box-total col-12 d-flex flex-column justify-content-center p-4 mt-3">
+              <h4 class="my-2">Convert</h4>
+              <div class="currency-input d-flex flex-row p-1">
+                <input type="text" placeholder="$1000">
+                <select name="currency" id="currency">
+                  <option value="USD">USD</option>
+                  <option value="LKR">LKR</option>
+                </select>
+              </div>
+              <div class="currency-input d-flex flex-row mt-2 p-1">
+                <input type="text" placeholder="0.0">
+                <select name="currency" id="currency">
+                  <option value="ETH">ETH</option>
+                  <option value="ETH">ETH</option>
+                </select>
+              </div>
+              <button class="convert-btn mt-2">Convert</button>
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-7 d-flex flex-column flex-lg-row">
-          <div class="col-12 col-lg-5 p-3 pe-lg-0 pb-0">
-            <img src="./img/chat.svg" alt="" class="img-fluid">
+      </div>
+      <!-- row 1 -->
+      <div class="col-12 d-flex flex-row px-4 pb-4 pt-0">
+        <!-- grid box -->
+        <div class="col-12 col-lg-8 d-flex justify-content-center align-items-center">
+          <div class="col-12 col-lg-7 d-flex flex-row">
+            <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
+              <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center mb-2 me-2">
+                <h1>ch-1</h1>
+              </div>
+              <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center me-2">
+                <h1>ch-2</h1>
+              </div>
+            </div>
+            <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
+              <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center mb-2 ">
+                <h1>ch-3</h1>
+              </div>
+              <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center ">
+                <h1>ch-4</h1>
+              </div>
+            </div>
           </div>
-          <div class="col-12 col-lg-7 p-3 pb-0">
-            <img src="./img/coins.svg" alt="" class="img-fluid">
+          <div class="col-12 col-lg-5 p-4">
+            <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center ">
+              <h1>chat</h1>
+            </div>
+          </div>
+        </div>
+        
+        <!-- total -->
+        <div class="col-12 col-lg-4 d-flex ">
+          
+          <div class="col-12 col-lg-7 d-flex w-100">
+            <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center py-2 px-3">
+              <!-- item 1 -->
+              <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
+                <div class="col-6 d-flex flex-row">
+                  <img src="./img/elements/Classic.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <div class="d-flex flex-column coin-text text-start">
+                    <p class="mb-0">Usdt</p>
+                    <span>Received</span>
+                  </div>
+                </div>
+                <div class="col-6 d-flex flex-row">
+                  <div class="d-flex flex-column coin-text-cu text-start">
+                    <p class="mb-0" id="badge">+$3,546</p>
+                    <span>Today, 13:45 pm</span>
+                  </div>
+                </div>
+              </div>
+              <!-- item 2 -->
+              <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
+                <div class="col-6 d-flex flex-row">
+                  <img src="./img/elements/Binance-Coin.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <div class="d-flex flex-column coin-text text-start">
+                    <p class="mb-0">Usdt</p>
+                    <span>Received</span>
+                  </div>
+                </div>
+                <div class="col-6 d-flex flex-row">
+                  <div class="d-flex flex-column coin-text-cu text-start">
+                    <p class="mb-0" id="badge">+$3,546</p>
+                    <span>Today, 13:45 pm</span>
+                  </div>
+                </div>
+              </div>
+              <!-- item 3 -->
+              <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
+                <div class="col-6 d-flex flex-row">
+                  <img src="./img/elements/Classic.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <div class="d-flex flex-column coin-text text-start">
+                    <p class="mb-0">Usdt</p>
+                    <span>Received</span>
+                  </div>
+                </div>
+                <div class="col-6 d-flex flex-row">
+                  <div class="d-flex flex-column coin-text-cu text-start">
+                    <p class="mb-0 text-danger" id="badge">+$3,546</p>
+                    <span>Today, 13:45 pm</span>
+                  </div>
+                </div>
+              </div>
+              <!-- item 4 -->
+              <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
+                <div class="col-6 d-flex flex-row">
+                  <img src="./img/elements/Group.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <div class="d-flex flex-column coin-text text-start">
+                    <p class="mb-0">Usdt</p>
+                    <span>Received</span>
+                  </div>
+                </div>
+                <div class="col-6 d-flex flex-row">
+                  <div class="d-flex flex-column coin-text-cu text-start">
+                    <p class="mb-0" id="badge">+$3,546</p>
+                    <span>Today, 13:45 pm</span>
+                  </div>
+                </div>
+              </div>
+              <!-- item 5 -->
+              <div class="d-flex w-100 flex-row justify-content-center align-items-center my-3">
+                <div class="col-6 d-flex flex-row">
+                  <img src="./img/elements/Etherium icon.png" alt="" class="me-2" style="width: 40px; height: 40px; border-radius: 100%;">
+                  <div class="d-flex flex-column coin-text text-start">
+                    <p class="mb-0">Usdt</p>
+                    <span>Received</span>
+                  </div>
+                </div>
+                <div class="col-6 d-flex flex-row">
+                  <div class="d-flex flex-column coin-text-cu text-start">
+                    <p class="mb-0" id="badge">+$3,546</p>
+                    <span>Today, 13:45 pm</span>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Content End -->
-
-    <!-- Back to Top -->
-    <!-- <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a> -->
+    <!-- grid end -->
+  </div>
+  <!-- Content End -->
   </div>
 
   <!-- scripts start -->
