--- a/signin.html
+++ b/signin.html
@@ -101,7 +101,7 @@
               </div>
               <!-- don't have an account -->
               <div class="d-flex justify-content-center position-relative mt-2 text-center w-100">
-                <p class="text-center">Don’t have an account? <a class="forgot-pw" href="#">Sign up</a></p>
+                <p class="text-center">Don’t have an account? <a class="forgot-pw" href="./dashboard.html">Sign up</a></p>
               </div>
             </form>
 
