--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
               </li>
             </ul>
             <div class="d-flex">
-              <button class="btn-sign-up px-3 py-2 mb-0" >SIGN UP</button>
-              <button class="btn-sign-in px-3 py-2 mb-0" >SIGN IN</button>
+              <a class="btn-sign-up px-3 py-2 mb-0" >SIGN UP</a>
+              <a href="./signin.html" class="btn-sign-in px-3 py-2 mb-0" >SIGN IN</a>
             </div>
           </div>
         </div>
