--- a/index.html
+++ b/index.html
@@ -34,69 +34,68 @@
 
 
 
-
-
-
-
-
-
-
-
-
-  <div class="container-fluid position-relative p-0 m-0">
-
-
-
-
-
-    <!-- Navbar Start -->
-    <section>
-      <nav class="navbar navbar-expand-lg px-2 px-lg-5">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="./img/elements/dashboard logo.png" alt="" class="img-nav-dashboard pe-3 my-3">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <li class="nav-item px-2">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item px-2">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item px-2">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item px-2">
-                <a class="nav-link" href="#">Protection</a>
-              </li>
-              <li class="nav-item px-2">
-                <a class="nav-link" href="#">Blockchain Explorer</a>
-              </li>
-            </ul>
-            <div class="d-flex">
-              <a class="btn-sign-up px-3 py-2 mb-0" >SIGN UP</a>
-              <a href="./signin.html" class="btn-sign-in px-3 py-2 mb-0" >SIGN IN</a>
-            </div>
+  <!-- Navbar Start -->
+  <section>
+    <nav class="navbar navbar-expand-lg px-2 px-lg-5 ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="./img/elements/dashboard logo.png" alt="" class="img-nav-dashboard pe-3 my-3">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item px-2">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#">Protection</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#">Blockchain Explorer</a>
+            </li>
+          </ul>
+          <div class="d-flex pb-3 pb-lg-0">
+            <a class="btn-sign-up ps-2 pe-3 px-lg-3 py-2 mb-0">SIGN UP</a>
+            <a href="./signin.html" class="btn-sign-in px-3 py-2 mb-0">SIGN IN</a>
           </div>
         </div>
-      </nav>
-    </section>
-    <!-- Navbar End -->
+      </div>
+    </nav>
+  </section>
+  <!-- Navbar End -->
 
 
 
 
+  <!-- hero section start -->
+  <section>
+    <div class="d-flex p-5 m-0 hero-bg text-white justify-content-center align-items-center">
+      <div class="d-flex flex-column w-75 h-5 text-center justify-content-center align-items-center">
+        <h2 class="hero-title">EXCLUSIVE ESCROW CRYPTO</h2>
+      <p class="hero-desc">
+        We were the first company to create online escrow crypto services for crypto - fiat transactions. We're leading the way in safe, reliable and trustworthy exchange services and will be for many years to come.
+      </p>
+      <div class="d-flex">
+        <a href="./signin.html" class="px-3 hero-btn hero-signin mb-0 py-2 me-2">SIGN IN</a>
+        <a href="#" class="px-3 hero-btn hero-signup mb-0 py-2 ms-2">SIGN UP</a>
+      </div>
+      </div>
+    </div>
+  </section>
+  <!-- hero section End -->
 
 
 
 
-
-
-  </div>
 
 
 
