--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <!-- hero section start -->
   <section>
-    <div class="d-flex p-5 m-0 hero-bg text-white justify-content-center align-items-center position-relative">
+    <div class="d-flex p-3 p-lg-5 m-0 hero-bg text-white justify-content-center align-items-center position-relative">
       <div class="d-flex position-absolute justify-content-center align-items-center escrow-bg-text">
         <img src="./img/elements/escrow.png" alt="" class="">
       </div>
@@ -127,7 +127,7 @@
   <!-- Market summary start -->
   <section>
     <div
-      class="d-flex flex-column p-5 m-0 text-white justify-content-center align-items-center text-center position-relative market-summery">
+      class="d-flex flex-column p-3 p-lg-5 m-0 text-white justify-content-center align-items-center text-center position-relative market-summery">
       <h2 class="mb-4">Market summary</h2>
       <div class="line-1 my-2"></div>
       <div class="d-flex corowsel-container py-3 flex-column text-center justify-content-center align-items-center">
@@ -373,6 +373,50 @@
 
 
 
+  <!-- About start -->
+<section>
+  <div
+      class="d-flex flex-column p-3 p-lg-5 m-0 text-white justify-content-center align-items-center text-center position-relative about">
+      <h2 class="mb-4">About</h2>
+      <div class="d-flex flex-column flex-md-row w-100">
+        <div class="col-12 col-md-5 d-flex justify-content-center align-items-center">
+          <img src="./img/elements/about_img.png" alt="" class="img-fluid">
+        </div>
+        <div class="col-12 col-md-7 d-flex flex-column justify-content-center align-items-center justify-content-lg-start align-items-lg-start padding-540">
+          <!-- box 1 -->
+          <div class="text_box d-flex justify-content-center align-items-center px-2 py-2 my-2">
+            <p class="mb-0 text-start px-2 px-sm-0">Escrow crypto is a service that brings both the traditional online market and the modern online market together.</p>
+          </div>
+          <!-- box 2 -->
+          <div class="text_box d-flex justify-content-center align-items-center px-2 py-2 my-2">
+            <p class="mb-0 text-start px-2 px-sm-0">The purpose of escrow crypto is to make the buyer and seller comfortable with transactions in the modern online world.</p>
+          </div>
+          <!-- box 3 -->
+          <div class="text_box d-flex justify-content-center align-items-center px-2 py-2 my-2">
+            <p class="mb-0 text-start px-2 px-sm-0">escrow crypto is an intermediary party that facilitates payments from crypto like bitcoin & usdt to fiat currency or crypto to crypto.</p>
+          </div>
+
+          <!-- para -->
+          <p class="text-start abt_para mt-3">
+            Headquartered in the United Kingdom, Escrow Crypto and its operating subsidiaries provide online escrow services that facilitate and accelerate e-commerce by assuring a secure settlement.
+          </p>
+          <p class="text-start abt_para">
+Escrow Crypto has pioneered the process of online exchange services. The company has established itself as one of the leading providers of secure business and consumer transaction management on the Internet.
+          </p>
+        </div>
+      </div>
+    </div>
+      
+</section>
+  <!-- About end -->
+
+
+
+
+
+
+
+
 
 
 
@@ -404,7 +448,7 @@
             dots: false,
             margin: 0,
         },
-        600:{
+        540:{
             items:4,
             loop:false,
             center: false,
@@ -412,7 +456,7 @@
             dots: false,
             nav: false
         },
-        1000:{
+        1024:{
             items: 7,
             loop:false,
             center: false,
