--- a/index.html
+++ b/index.html
@@ -374,40 +374,46 @@
 
 
   <!-- About start -->
-<section>
-  <div
+  <section>
+    <div
       class="d-flex flex-column p-3 p-lg-5 m-0 text-white justify-content-center align-items-center text-center position-relative about">
-      <h2 class="mb-4">About</h2>
+      <h2 class="mb-4 title_h2">About</h2>
       <div class="d-flex flex-column flex-md-row w-100">
         <div class="col-12 col-md-5 d-flex justify-content-center align-items-center">
           <img src="./img/elements/about_img.png" alt="" class="img-fluid">
         </div>
-        <div class="col-12 col-md-7 d-flex flex-column justify-content-center align-items-center justify-content-lg-start align-items-lg-start padding-540">
+        <div
+          class="col-12 col-md-7 d-flex flex-column padding-540">
           <!-- box 1 -->
           <div class="text_box d-flex justify-content-center align-items-center px-2 py-2 my-2">
-            <p class="mb-0 text-start px-2 px-sm-0">Escrow crypto is a service that brings both the traditional online market and the modern online market together.</p>
+            <p class="mb-0 text-start px-2 px-sm-0">Escrow crypto is a service that brings both the traditional online
+              market and the modern online market together.</p>
           </div>
           <!-- box 2 -->
           <div class="text_box d-flex justify-content-center align-items-center px-2 py-2 my-2">
-            <p class="mb-0 text-start px-2 px-sm-0">The purpose of escrow crypto is to make the buyer and seller comfortable with transactions in the modern online world.</p>
+            <p class="mb-0 text-start px-2 px-sm-0">The purpose of escrow crypto is to make the buyer and seller
+              comfortable with transactions in the modern online world.</p>
           </div>
           <!-- box 3 -->
           <div class="text_box d-flex justify-content-center align-items-center px-2 py-2 my-2">
-            <p class="mb-0 text-start px-2 px-sm-0">escrow crypto is an intermediary party that facilitates payments from crypto like bitcoin & usdt to fiat currency or crypto to crypto.</p>
+            <p class="mb-0 text-start px-2 px-sm-0">escrow crypto is an intermediary party that facilitates payments
+              from crypto like bitcoin & usdt to fiat currency or crypto to crypto.</p>
           </div>
 
           <!-- para -->
-          <p class="text-start abt_para mt-3">
-            Headquartered in the United Kingdom, Escrow Crypto and its operating subsidiaries provide online escrow services that facilitate and accelerate e-commerce by assuring a secure settlement.
+          <p class="text-start para mt-3">
+            Headquartered in the United Kingdom, Escrow Crypto and its operating subsidiaries provide online escrow
+            services that facilitate and accelerate e-commerce by assuring a secure settlement.
           </p>
-          <p class="text-start abt_para">
-Escrow Crypto has pioneered the process of online exchange services. The company has established itself as one of the leading providers of secure business and consumer transaction management on the Internet.
+          <p class="text-start para">
+            Escrow Crypto has pioneered the process of online exchange services. The company has established itself as
+            one of the leading providers of secure business and consumer transaction management on the Internet.
           </p>
         </div>
       </div>
     </div>
-      
-</section>
+
+  </section>
   <!-- About end -->
 
 
@@ -415,8 +421,120 @@ Escrow Crypto has pioneered the process of online exchange services. The company
 
 
 
+  <!-- crypto services start -->
+  <section>
+    <div class="d-flex flex-column p-3 p-lg-5 m-0">
+      <h2 class="mb-2 mb-lg-4 title_h2 text-center">ESCROW Crypto Services</h2>
+    </div>
 
+    <!-- service 1 -->
+    <div
+      class="d-flex d-flex flex-column-reverse flex-lg-row  text-white px-0 px-lg-5 justify-content-center align-items-center text-start position-relative crypto_swapping my-lg-5 py-lg-5">
+      <div class="col-12 col-lg-9 d-flex flex-column absolute-z-3 px-3 px-lg-5">
+        <h3 class="mb-4 title_h3 text-start">CRYPTO SWAPPING</h3>
+        <p class="text-start para mt-3 ">
+          Crypto swapping involves the following:
+        </p>
+        <p class="text-start para">
+          Whenever two participants decide to exchange their crypto for a certain reason, we can facilitate the
+          transaction.
+        </p>
+        <p class="text-start para">
+          Participant A, located in Dubai, would like to exchange his Bitcoins to Cardano with participant B who is
+          located in the United Kingdom.
+        </p>
+        <p class="text-start para">
+          Both parties sign an agreement, drawn up by themselves, with the terms and conditions. If the agreement is
+          signed, both parties will send their crypto to Escrow Crypto and Escrow Crypto sends the bitcoins to customer
+          B and the Cardano's to customer A.
+        </p>
 
+        <a href="" class="px-3 color_btn my-4 py-2 me-2">View more</a>
+        <div class="h_line mt-4 mb-3"></div>
+      </div>
+      <div class="col-12 col-lg-3 d-flex flex-column absolute-z-2 justify-content-center align-items-center py-3">
+        <img src="./img/elements/crypto_swap.png" alt="" class="d-flex d-lg-none img_swap">
+      </div>
+      <div
+        class="col-12 col-lg-12 position-absolute absolute-z-1 bottom-0 d-none d-lg-flex flex-column flex-lg-row justify-content-center align-items-center h-100">
+        <div class="col-12 col-lg-6"></div>
+        <div class="col-12 col-lg-6 col-12 col-lg-6 d-flex justify-content-end align-items-end">
+          <img src="./img/elements/crypto_swap.png" alt="" class="img_swap">
+        </div>
+      </div>
+    </div>
+
+    <!-- service 2 -->
+    <div
+      class="d-flex d-flex flex-column flex-lg-row  text-white my-lg-5 py-lg-5 px-0 px-lg-5 justify-content-center align-items-center text-start position-relative crypto_swapping">
+      <div class="col-12 col-lg-5 d-flex flex-column justify-content-center align-items-center my-3">
+        <img src="./img/elements/online_purchases.png" alt="" class="img_swap">
+      </div>
+      <div class="col-12 col-lg-7 d-flex flex-column px-3 px-lg-5">
+        <h3 class="mb-4 title_h3 text-start">ONLINE PURCHASES</h3>
+        <p class="text-start para mt-3 ">
+          We support our customers in purchasing the following goods online:
+        </p>
+        <div class="d-flex flex-column flex-md-row">
+          <ul>
+            <li class="text-start para mb-2">
+              Cars, trucks etc.
+            </li>
+            <li class="text-start para mb-2">
+              Jewelry / Watches
+            </li>
+            <li class="text-start para mb-2">
+              Antiques
+            </li>
+            <li class="text-start para mb-2">
+              Art
+            </li>
+          </ul>
+          <ul>
+            <li class="text-start para mb-2">
+              Clothes / Accessories
+            </li>
+            <li class="text-start para mb-2">
+              Electronics
+            </li>
+            <li class="text-start para mb-2">
+              other…
+            </li>
+          </ul>
+        </div>
+        <p class="text-start para">
+          Whenever a client comes to us with the request to purchase a good with cryptocurrency, we are ready to operate as a trust fund / 3th party.
+        </p>
+
+        <a href="" class="px-3 color_btn my-4 py-2 me-2">View more</a>
+        <div class="h_line mt-4 mb-3"></div>
+      </div>
+
+    </div>
+
+    <!-- service 2 -->
+    <div
+      class="d-flex d-flex flex-column-reverse flex-lg-row  text-white my-lg-5 py-lg-5 px-0 px-lg-5 justify-content-center align-items-center text-start position-relative crypto_swapping">
+      
+      <div class="col-12 col-lg-7 d-flex flex-column px-3 px-lg-5">
+        <h3 class="mb-4 title_h3 text-start">MILESTONE TRANSACTIONS</h3>
+        <p class="text-start para mt-3 ">
+          A milestone transaction is when a payment is made in installments and the service is also delivered in installments.
+        </p>
+        <p class="text-start para">
+          Milestone transactions divide a transaction into multiple phases. Milestone transactions can be used for a transfer of goods, services, or a combination of both goods and services. For instance, let’s say you are hiring an influencer to do some promotion work for your brand. You can arrange the milestone transaction in such a way that you can release 50% of the payment when the photoshoot is complete, and the remaining 50% when the influencer places the content on his social media account.
+        </p>
+
+        <a href="" class="px-3 color_btn my-4 py-2 me-2">View more</a>
+        <div class="h_line mt-4 mb-3"></div>
+      </div>
+      <div class="col-12 col-lg-5 d-flex flex-column justify-content-center align-items-center my-3">
+        <img src="./img/elements/milestones.png" alt="" class="img_swap">
+      </div>
+
+    </div>
+  </section>
+  <!-- crypto services end -->
 
 
 
@@ -439,33 +557,33 @@ Escrow Crypto has pioneered the process of online exchange services. The company
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script>
     $('.owl-carousel').owlCarousel({
-    responsive:{
-        0:{
-            items:2,
-            center: true,
-            nav:true,
-            loop:true,
-            dots: false,
-            margin: 0,
+      responsive: {
+        0: {
+          items: 2,
+          center: true,
+          nav: true,
+          loop: true,
+          dots: false,
+          margin: 0,
         },
-        540:{
-            items:4,
-            loop:false,
-            center: false,
-            margin: 0,
-            dots: false,
-            nav: false
+        540: {
+          items: 4,
+          loop: false,
+          center: false,
+          margin: 0,
+          dots: false,
+          nav: false
         },
-        1024:{
-            items: 7,
-            loop:false,
-            center: false,
-            margin: 0,
-            dots: false,
-            nav: false
+        1024: {
+          items: 7,
+          loop: false,
+          center: false,
+          margin: 0,
+          dots: false,
+          nav: false
         }
-    }
-})
+      }
+    })
   </script>
 
   <script src="./js/script.js"></script>
