--- a/index.html
+++ b/index.html
@@ -528,13 +528,28 @@
         <a href="" class="px-3 color_btn my-4 py-2 me-2">View more</a>
         <div class="h_line mt-4 mb-3"></div>
       </div>
-      <div class="col-12 col-lg-5 d-flex flex-column justify-content-center align-items-center my-3">
-        <img src="./img/elements/milestones.png" alt="" class="img_swap">
+      <div class="col-12 col-lg-5 p-3 p-lg-5 d-flex flex-column justify-content-center align-items-center my-3">
+        <img src="./img/elements/milestones.png" alt="" class="img-fluid p-3 p-lg-5">
       </div>
-
     </div>
   </section>
   <!-- crypto services end -->
+
+
+  <!-- benifit start -->
+  <section>
+    <div class="d-flex flex-column p-3 p-lg-5 m-0 justify-content-center align-items-center benifit_sec">
+      <h3 class="mb-4 title_h3 text-center">Benefits of Using escrow Crypto</h3>
+        <p class="text-center para mt-3 ">
+          Escrow Crypto protects equally all parties involved in a transaction.
+People resort to Escrow Crypto when they need to buy or sell something of value but don’t know the other party, regardless of where the transaction takes place. Customers have used our service to complete transactions for everything from classified ad sites and online merchants, to auction sites and B2B e-commerce sites.
+        </p>
+        <a href="" class="px-3 color_btn my-4 py-2 me-2">View more</a>
+        <div class="h_line mt-4 mb-3"></div>
+        
+    </div>
+  </section>
+  <!-- benifit end -->
 
 
 
