--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
 
   <!-- crypto services start -->
-  <section>
+  <section class="service_bg">
     <div class="d-flex flex-column p-3 p-lg-5 m-0">
       <h2 class="mb-2 mb-lg-4 title_h2 text-center">ESCROW Crypto Services</h2>
     </div>
@@ -543,7 +543,10 @@
 
   <!-- benifit start -->
   <section>
-    <div class="d-flex flex-column p-3 px-lg-5 py-lg-5 m-0 justify-content-center align-items-center benifit_sec">
+    <div class="d-flex flex-column p-3 px-lg-5 py-lg-5 m-0 justify-content-center align-items-center benifit_sec position-relative">
+      <div class="d-flex position-absolute top-0" style="right: 0">
+        <img src="./img/elements/benifi_coin_bg.png" alt="" style="width: 200px; height: auto;">
+      </div>
       <h3 class="mb-4 title_h3 text-center">Benefits of Using escrow Crypto</h3>
       <p class="text-center para mt-3 ">
         Escrow Crypto protects equally all parties involved in a transaction.
@@ -561,7 +564,7 @@
 
   <!-- protection start -->
   <section>
-    <div class="d-flex flex-column p-3 px-lg-5 m-0 justify-content-center align-items-center benifit_sec py-5">
+    <div class="d-flex flex-column p-3 px-lg-5 m-0 justify-content-center align-items-center protection_sec py-5">
       <h3 class="mb-4 title_h3 text-center">Buyer, Seller, & Broker Protection</h3>
       <p class="text-center para mt-3 ">
         Conducting high-value transactions with people you don’t know can be a risky proposition, especially when you do
@@ -575,7 +578,68 @@
         you’re a Buyer, a Seller, or a Broker.
       </p>
       <!-- desktop -->
-      <div class="d-none d-lg-flex"></div>
+      <div class="d-none d-lg-flex justify-content-center position-relative py-5" style="margin-bottom: 200px;">
+        <!-- diagram lines -->
+        <div class="d-flex px-5" style="width: 70% !important;">
+          <img src="./img/elements/diagram connector.png" alt="" class="img-fluid">
+        </div>
+        <!-- box 1 -->
+        <div class="box-1 position-absolute">
+          <div class="d-flex position-relative p-2 mb-3">
+            <div class="d-flex position-absolute top-0" style="left: 0;">
+              <img src="./img/elements/box_outline.png" alt="" class="img-fluid">
+            </div>
+            <div class="d-flex protection_text_box flex-column p-3">
+              <h4 class="protection_title">Buyer Protection</h4>
+              <p class="para mb-0 w-100">At Escrow Crypto, we protect you as a Buyer by ensuring you receive, in full,
+                the goods and/or services you were promised.</p>
+              <p class="para mb-0 w-100">
+                Every Buyer has their own decentralized cold storage wallet at Escrow Crypto. The crypto is kept in cold
+                storage by Escrow Crypto at all times and...
+                <a href="#" style="color: #15BFFD;">Read more</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- box 2 -->
+        <div class="box-2 position-absolute">
+          <div class="d-flex position-relative p-2 mb-3">
+            <div class="d-flex position-absolute top-0" style="left: 0;">
+              <img src="./img/elements/box_outline.png" alt="" class="img-fluid">
+            </div>
+            <div class="d-flex protection_text_box flex-column p-3">
+              <h4 class="protection_title">Buyer Protection</h4>
+              <p class="para mb-0 w-100">At Escrow Crypto, we protect you as a Buyer by ensuring you receive, in full,
+                the goods and/or services you were promised.</p>
+              <p class="para mb-0 w-100">
+                Every Buyer has their own decentralized cold storage wallet at Escrow Crypto. The crypto is kept in cold
+                storage by Escrow Crypto at all times and...
+                <a href="#" style="color: #15BFFD;">Read more</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- box 3 -->
+        <div class="box-3 position-absolute">
+          <div class="d-flex position-relative p-2 mb-3">
+            <div class="d-flex position-absolute top-0" style="left: 0;">
+              <img src="./img/elements/box_outline.png" alt="" class="img-fluid">
+            </div>
+            <div class="d-flex protection_text_box flex-column p-3">
+              <h4 class="protection_title">Buyer Protection</h4>
+              <p class="para mb-0 w-100">At Escrow Crypto, we protect you as a Buyer by ensuring you receive, in full,
+                the goods and/or services you were promised.</p>
+              <p class="para mb-0 w-100">
+                Every Buyer has their own decentralized cold storage wallet at Escrow Crypto. The crypto is kept in cold
+                storage by Escrow Crypto at all times and...
+                <a href="#" style="color: #15BFFD;">Read more</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- mobile -->
       <div class="d-flex d-lg-none flex-column">
         <!-- box 1 -->
@@ -588,10 +652,13 @@
           </div>
           <div class="d-flex protection_text_box flex-column p-3">
             <h4 class="protection_title">Buyer Protection</h4>
-            <p class="para mb-0">At Escrow Crypto, we protect you as a Buyer by ensuring you receive, in full, the goods and/or services you were promised.</p>
+            <p class="para mb-0">At Escrow Crypto, we protect you as a Buyer by ensuring you receive, in full, the goods
+              and/or services you were promised.</p>
             <p class="para mb-0">
-              Every Buyer has their own decentralized cold storage wallet at Escrow Crypto. The crypto is kept in cold storage by Escrow Crypto at all times and... 
-            <a href="#" style="color: #15BFFD;">Read more</a></p>
+              Every Buyer has their own decentralized cold storage wallet at Escrow Crypto. The crypto is kept in cold
+              storage by Escrow Crypto at all times and...
+              <a href="#" style="color: #15BFFD;">Read more</a>
+            </p>
           </div>
         </div>
         <!-- box 2 -->
@@ -605,12 +672,14 @@
 
           <div class="d-flex protection_text_box flex-column p-3">
             <h4 class="protection_title">Seller protection</h4>
-            <p class="para mb-0">Escrow Crypto ensures that, as a seller, you’ll receive your money once you deliver the promised goods and/or services.
-              </p>
+            <p class="para mb-0">Escrow Crypto ensures that, as a seller, you’ll receive your money once you deliver the
+              promised goods and/or services.
+            </p>
             <p class="para mb-0">
               The seller receives proof of payment from Escrow Crypto before sending the goods.
-              The selling party has its own wallet at Escrow... 
-            <a href="#" style="color: #15BFFD;">Read more</a></p>
+              The selling party has its own wallet at Escrow...
+              <a href="#" style="color: #15BFFD;">Read more</a>
+            </p>
           </div>
         </div>
         <!-- box 3 -->
@@ -624,8 +693,10 @@
           <div class="d-flex protection_text_box flex-column p-3">
             <h4 class="protection_title">Broker protection</h4>
             <p class="para mb-0">
-              Lorem ipsum dolor sit amet consectetur. Elit massa erat vitae non semper quis. Morbi sed aliquet donec  facilisis. Senectus eget.
-            <a href="#" style="color: #15BFFD;">Read more</a></p>
+              Lorem ipsum dolor sit amet consectetur. Elit massa erat vitae non semper quis. Morbi sed aliquet donec
+              facilisis. Senectus eget.
+              <a href="#" style="color: #15BFFD;">Read more</a>
+            </p>
           </div>
         </div>
       </div>
