charts grid view

--- a/dashboard.html
+++ b/dashboard.html
@@ -214,20 +214,120 @@
         <div class="col-12 col-lg-8 d-flex justify-content-center align-items-start">
           <div class="col-12 col-lg-7 d-flex flex-row">
             <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
+              <!-- box 1 -->
               <div
                 class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center mb-2 me-2">
-                <h1>ch-1</h1>
+                <div class="d-flex flex-row p-2 w-100 justify-content-between">
+                  <div class="d-flex flex-row justify-content-center align-items-center">
+                    <img src="./img/elements/btc.png" alt="" style="width: 30px; height: 30px; border-radius: 100%;" class="me-2">
+                    <p class="coin-box-title mb-0">BTC/USDT</p>
+                  </div>
+                  <div class="d-flex flex-row justify-content-center align-items-center">
+                    <i class="bi bi-three-dots-vertical text-white"></i> 
+                  </div>
+                </div>
+                <div class="d-flex flex-row p-2 w-100 justify-content-between align-items-center">
+                  <div class="col-6 d-flex flex-row">
+                    <span class="price-span px-2 py-1 me-2">+0.8%</span>
+                    <div class="icon-circle">
+                      <i class="bi bi-arrow-up-right"></i>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="77" height="47" viewBox="0 0 77 47" fill="none">
+                      <path d="M1.6062 43.4568C4.37637 46.2513 9.08566 48.487 16.5651 30.0432C20.3114 22.4849 26.7596 20.378 34.0828 25.5657C35.7726 26.7627 36.989 28.4858 38.3597 30.0381C41.9746 34.1324 47.8935 36.3128 54.4397 20.5104C55.2661 18.5155 55.7842 16.3955 56.1897 14.2746C57.8414 5.63594 61.637 -6.54882 75.5697 8.24605" stroke="#25F2FF" stroke-width="2.44508"/>
+                    </svg>
+                  </div>
+                </div>
+                <div class="d-flex text-start w-100 px-2 pb-2">
+                  <p class="price-p text-start mb-0">$ 34.850,10</p>
+                </div>
               </div>
+              <!-- box 2 -->
               <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center me-2">
-                <h1>ch-2</h1>
+                <div class="d-flex flex-row p-2 w-100 justify-content-between">
+                  <div class="d-flex flex-row justify-content-center align-items-center">
+                    <img src="./img/elements/eth.png" alt="" style="width: 30px; height: 30px; border-radius: 100%;" class="me-2">
+                    <p class="coin-box-title mb-0">ETH/USDT</p>
+                  </div>
+                  <div class="d-flex flex-row justify-content-center align-items-center">
+                    <i class="bi bi-three-dots-vertical text-white"></i> 
+                  </div>
+                </div>
+                <div class="d-flex flex-row p-2 w-100 justify-content-between align-items-center">
+                  <div class="col-6 d-flex flex-row">
+                    <span class="price-span px-2 py-1 me-2">+0.8%</span>
+                    <div class="icon-circle">
+                      <i class="bi bi-arrow-up-right"></i>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="77" height="47" viewBox="0 0 77 47" fill="none">
+                      <path d="M1.6062 43.4568C4.37637 46.2513 9.08566 48.487 16.5651 30.0432C20.3114 22.4849 26.7596 20.378 34.0828 25.5657C35.7726 26.7627 36.989 28.4858 38.3597 30.0381C41.9746 34.1324 47.8935 36.3128 54.4397 20.5104C55.2661 18.5155 55.7842 16.3955 56.1897 14.2746C57.8414 5.63594 61.637 -6.54882 75.5697 8.24605" stroke="#25F2FF" stroke-width="2.44508"/>
+                    </svg>
+                  </div>
+                </div>
+                <div class="d-flex text-start w-100 px-2 pb-2">
+                  <p class="price-p text-start mb-0">$ 34.850,10</p>
+                </div>
               </div>
             </div>
             <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
-              <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center mb-2 ">
-                <h1>ch-3</h1>
+              <!-- box 3 -->
+              <div class="d-flex w-100 box-total-red d-flex flex-column justify-content-center align-items-center mb-2 ">
+                <div class="d-flex flex-row p-2 w-100 justify-content-between">
+                  <div class="d-flex flex-row justify-content-center align-items-center">
+                    <img src="./img/elements/usdt.png" alt="" style="width: 30px; height: 30px; border-radius: 100%;" class="me-2">
+                    <p class="coin-box-title mb-0 text-uppercase">Usdt</p>
+                  </div>
+                  <div class="d-flex flex-row justify-content-center align-items-center">
+                    <i class="bi bi-three-dots-vertical text-white"></i> 
+                  </div>
+                </div>
+                <div class="d-flex flex-row p-2 w-100 justify-content-between align-items-center">
+                  <div class="col-6 d-flex flex-row">
+                    <span class="price-span-red px-2 py-1 me-2">+0.8%</span>
+                    <div class="icon-circle-red">
+                      <i class="bi bi-arrow-down-left"></i>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="77" height="47" viewBox="0 0 87 55" fill="none">
+                      <path d="M2.04602 54.1159C2.04602 54.1159 3.29826 50.0015 4.70014 43.9631C5.62789 39.9669 6.55587 35.671 9.6483 32.9753C13.344 29.7537 18.2011 29.6737 23.5198 33.4413C25.2096 34.6384 26.426 36.3614 27.7967 37.9138C31.4117 42.008 37.3306 44.1884 43.8767 28.3861C44.7031 26.3911 45.2212 24.2712 45.6267 22.1503C46.9863 15.0396 49.7984 5.52635 58.5207 10.6343C63.3913 13.4866 66.9283 21.2682 72.0042 18.7995C75.376 17.1596 79.8031 12.0976 85.1786 0.629883" stroke="#FF2525" stroke-width="2.44508"/>
+                    </svg>
+                  </div>
+                </div>
+                <div class="d-flex text-start w-100 px-2 pb-2">
+                  <p class="price-p text-start mb-0">$ 34.850,10</p>
+                </div>
               </div>
+              <!-- box 4 -->
               <div class="d-flex w-100 box-total d-flex flex-column justify-content-center align-items-center ">
-                <h1>ch-4</h1>
+                <div class="d-flex flex-row p-2 w-100 justify-content-between">
+                  <div class="d-flex flex-row justify-content-center align-items-center">
+                    <img src="./img/elements/ltc.png" alt="" style="width: 30px; height: 30px; border-radius: 100%;" class="me-2">
+                    <p class="coin-box-title mb-0">LTC/USDT</p>
+                  </div>
+                  <div class="d-flex flex-row justify-content-center align-items-center">
+                    <i class="bi bi-three-dots-vertical text-white"></i> 
+                  </div>
+                </div>
+                <div class="d-flex flex-row p-2 w-100 justify-content-between align-items-center">
+                  <div class="col-6 d-flex flex-row">
+                    <span class="price-span px-2 py-1 me-2">+0.8%</span>
+                    <div class="icon-circle">
+                      <i class="bi bi-arrow-up-right"></i>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="77" height="47" viewBox="0 0 77 47" fill="none">
+                      <path d="M1.6062 43.4568C4.37637 46.2513 9.08566 48.487 16.5651 30.0432C20.3114 22.4849 26.7596 20.378 34.0828 25.5657C35.7726 26.7627 36.989 28.4858 38.3597 30.0381C41.9746 34.1324 47.8935 36.3128 54.4397 20.5104C55.2661 18.5155 55.7842 16.3955 56.1897 14.2746C57.8414 5.63594 61.637 -6.54882 75.5697 8.24605" stroke="#25F2FF" stroke-width="2.44508"/>
+                    </svg>
+                  </div>
+                </div>
+                <div class="d-flex text-start w-100 px-2 pb-2">
+                  <p class="price-p text-start mb-0">$ 34.850,10</p>
+                </div>
               </div>
             </div>
           </div>
